jimt/fixed all layout issues? Needs to re-create gutter

--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,22 @@
   box-sizing: border-box;
 }
 
+.error {
+  background-color: #faa;
+  padding: 5px;
+  font-size: 95%;
+}
+
+.warning {
+  background-color: #ffa;
+  padding: 5px;
+}
+
+.warning ul {
+  padding: 0;
+  list-style: none;
+}
+
 ul.students {
   list-style: none;
   padding: 0;
@@ -20,7 +36,7 @@ li.student {
   border: 2px solid;
 
   display: grid;
-  grid-template-columns: 70% 30%;
+  grid-template-columns: 75% 25%;
   grid-auto-rows: 100%;
   border-top-width: 4px;
   border-bottom-width: 4px;
@@ -29,6 +45,8 @@ li.student {
 }
 
 div.student-name {
+  padding: 2px;
+  text-align: center;
 }
 
 ul.student-grades {
@@ -37,6 +55,8 @@ ul.student-grades {
   display: grid;
   grid-template-columns: 1fr 1fr;
   border: 1px solid black;
+
+  height: 100%;
 }
 
 ul.student-grades li.grade {
@@ -55,4 +75,68 @@ li.first-student {
 
 li.last-student {
   border-right-width: 4px;
+}
+
+.assignments-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 10%;
+  box-sizing: border-box;
+  margin-top: 0.1in;
+  max-height: 2in;
+}
+
+.assignments-grid div {
+  border-bottom: 1px solid black;
+  height: 0.2in;
+}
+
+.header-grid {
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr 2fr;
+  grid-gap: 2%;
+  border: 1px solid black;
+  font-size: 250%;
+  text-align: left;
+  font-weight: bold;
+  box-sizing: border-box;
+  padding-left: 5px;
+  padding-right: 5px;
+  align-items: center;
+}
+
+.print-control {
+  display: none;
+}
+
+.ui-control {
+  width: 100%;
+}
+
+.config {
+  width: 300px;
+}
+
+.button-group {
+  display: grid;
+  grid-template-columns: 1fr 3fr 3fr;
+  grid-gap: 3px;
+}
+
+@media print {
+  .config {
+    display: none;
+  }
+
+  .ui-control {
+    display: none;
+  }
+
+  .print-control {
+    display: initial;
+  }
+
+  .student-list {
+    display: none;
+  }
 }
